k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: laundry-frontend
  namespace: default
spec:
  type: NodePort
  selector:
    app: laundry-frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 30080
